--- a/index.ipynb
+++ b/index.ipynb
@@ -47,12 +47,255 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "con = sqlite3.connect('Walmart.db')\n",
+    "curr = con.cursor()\n",
+    "curr.execute('''select * from Sales join store_details using(Store)''')\n",
+    "df = pd.DataFrame(curr.fetchall())\n",
+    "df.columns = [i[0] for i in curr.description]\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.IsHoliday = df.IsHoliday.astype(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8190 entries, 0 to 8189\n",
+      "Data columns (total 12 columns):\n",
+      "Store           8190 non-null int64\n",
+      "Date            8190 non-null object\n",
+      "Temperature     8190 non-null float64\n",
+      "Fuel_Price      8190 non-null float64\n",
+      "MarkDown1       4032 non-null float64\n",
+      "MarkDown2       2921 non-null float64\n",
+      "MarkDown3       3613 non-null float64\n",
+      "MarkDown4       3464 non-null float64\n",
+      "MarkDown5       4050 non-null float64\n",
+      "CPI             7605 non-null float64\n",
+      "Unemployment    7605 non-null float64\n",
+      "IsHoliday       8190 non-null bool\n",
+      "dtypes: bool(1), float64(9), int64(1), object(1)\n",
+      "memory usage: 711.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "to_merge = pd.read_csv('./economy_data.csv')\n",
+    "to_merge.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = pd.merge(df, to_merge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Dept</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>IsHoliday</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "      <th>MarkDown1</th>\n",
+       "      <th>MarkDown2</th>\n",
+       "      <th>MarkDown3</th>\n",
+       "      <th>MarkDown4</th>\n",
+       "      <th>MarkDown5</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>46039.49</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>38.51</td>\n",
+       "      <td>2.548</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.24217</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>44682.74</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>38.51</td>\n",
+       "      <td>2.548</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.24217</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>10887.84</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>38.51</td>\n",
+       "      <td>2.548</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.24217</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>35351.21</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>38.51</td>\n",
+       "      <td>2.548</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.24217</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>29620.81</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A</td>\n",
+       "      <td>151315</td>\n",
+       "      <td>38.51</td>\n",
+       "      <td>2.548</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>211.24217</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store  Dept        Date  Weekly_Sales  IsHoliday Type    Size  Temperature  \\\n",
+       "0      1     1  2010-02-12      46039.49       True    A  151315        38.51   \n",
+       "1      1     2  2010-02-12      44682.74       True    A  151315        38.51   \n",
+       "2      1     3  2010-02-12      10887.84       True    A  151315        38.51   \n",
+       "3      1     4  2010-02-12      35351.21       True    A  151315        38.51   \n",
+       "4      1     5  2010-02-12      29620.81       True    A  151315        38.51   \n",
+       "\n",
+       "   Fuel_Price  MarkDown1  MarkDown2  MarkDown3  MarkDown4  MarkDown5  \\\n",
+       "0       2.548        NaN        NaN        NaN        NaN        NaN   \n",
+       "1       2.548        NaN        NaN        NaN        NaN        NaN   \n",
+       "2       2.548        NaN        NaN        NaN        NaN        NaN   \n",
+       "3       2.548        NaN        NaN        NaN        NaN        NaN   \n",
+       "4       2.548        NaN        NaN        NaN        NaN        NaN   \n",
+       "\n",
+       "         CPI  Unemployment  \n",
+       "0  211.24217         8.106  \n",
+       "1  211.24217         8.106  \n",
+       "2  211.24217         8.106  \n",
+       "3  211.24217         8.106  \n",
+       "4  211.24217         8.106  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged.to_csv('Merged_Store_Data.csv', index = False) "
    ]
   },
   {
@@ -80,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
